--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "url": "https://github.com/contentful-userland/gatsby-contentful-starter/issues"
   },
   "dependencies": {
-    "gatsby-image": "^2.0.38",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "contentful": "^7.13.1",
+    "gatsby-image": "^2.2.41",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-source-contentful": "^2.0.48",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.18",
     "lodash": "^4.17.13",
+    "node-sass": "^4.13.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
@@ -21,16 +25,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "chalk": "^2.4.2",
-    "contentful-import": "^7.4.3",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.3.22",
     "gh-pages": "^2.0.1",
-    "inquirer": "^6.2.2",
     "prettier": "^1.17.0",
-    "rimraf": "^2.6.3",
     "yargs-parser": "^13.0.0"
   },
   "homepage": "https://github.com/contentful-userland/gatsby-contentful-starter#readme",
